junit tests are 100% working based on object location with URI