@@ -5,6 +5,7 @@ import static org.junit.Assert.*;
 import java.io.File;
 import java.io.FileInputStream;
 import java.io.InputStream;
+import java.net.URI;
 import java.net.URL;
 
 import org.ccopy.resource.util.StringUtil;
@@ -15,7 +16,7 @@ public class TestS3ObjectCopyRequestParser extends TestS3InitURLs {
 	@Test
 	public void testS3ObjectCopyRequestParser() {
 		try {
-			S3Resource obj = new S3Resource(new URL(TEST_URL_FILE));
+			S3Resource obj = new S3Resource(new URI(TEST_URL_FILE));
 			InputStream in = new FileInputStream(new File(this.getClass().getResource("objectCopyResponse.xml").toURI()));
 			S3ObjectCopyRequestParser parse = new S3ObjectCopyRequestParser(in);
 			// check that both values are correct set
